<resources>
    <string name="app_name">MpostProtims</string>
    <string name="device">设备</string>
    <string name="setting">设置</string>
    <string name="serverSet">1、服务器设置</string>
    <string name="serverSet2">服务器设置</string>
    <string name="about1">2、关于</string>
    <string name="about2">关于</string>
    <string name="version1">版本:PAX v1.0.0</string>
    <string name="versionInfo">版本信息：\n © 2016 PAX Technology Limited. All rights reserved</string>
    <string name="link">http://www.pax.com.cn</string>
    <string name="serverIp">Server IP</string>
    <string name="serverPort">Server Port</string>
    <string name="tid">TID</string>
    <string name="atumn">允许移动数据下载</string>
    <string name="save1">保存</string>
    <string name="deviceList">设备列表</string>
    <string name="addDevice">添加设备</string>
    <string name="updatePos">可更新POS</string>
    <string name="notUpdatePos">不可更新POS</string>
    <string name="mposList">MPOS列表</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="BT">BT</string>
    <string name="USB">USB</string>
    <string name="WIFI">WIFI</string>
    <string name="BtDevice">  通过蓝牙已配对过的终端</string>
    <string name="SN">SN：</string>
    <string name="PN">PN：</string>
    <string name="OSVersion">OS版本：</string>
    <string name="BootVersion">BOOT版本：</string>
    <string name="BatteryInfo">电量信息：</string>
    <string name="MPosInfo">MPOS终端信息</string>
    <string name="addNewPos">新增终端</string>
    <string name="invertSeletc">反选</string>
    <string name="allSelect">全选</string>
    <string name="comm">COMM:</string>
    <string name="baudRate">BaudRate:</string>
    <string name="addByUsb">添加</string>
    <string name="usbDevice">通过USB已经配对过的终端</string>
    <string name="wifiIp">IP:</string>
    <string name="wifiPort">Port</string>
    <string name="wifiDevice">通过WIFI已经配对过的终端</string>
    <string name="hintcomm">请输入COMM值</string>
    <string name="hintip">请输入IP值</string>
    <string name="hintbaudrate">请输入BaudRate值</string>
    <string name="hintport">请输入Port值</string>
    <string name="newfun">新功能</string>
    <string name="defaultIp">192.168.1.2</string>
    <string name="defaultPort">9998</string>
    <string name="defaultTid">00000001</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <!--以下为旧程序需要-->
    <string name="action_settings">Settings</string>
    <string name="exit_program">     Exit ?</string>
    <string name="prompt">Prompt</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="server_addr">SERVER   IP</string>
    <string name="server_port">SERVER PORT</string>
    <string name="download_id">TASK ID</string>
    <string name="bluetooth_mac">BT  DEVICES</string>
    <string name="waiting_pair_result">Waiting pair result</string>
    <string name="retry_get_pair_result_again">Retry get pair result again…</string>
    <string name="retry_pair_again">Retry pair again…</string>
    <string name="select_only_one_paired">Select one paired device</string>
    <string name="reload">ReConfig</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="pair">Pair</string>
    <string name="pairing">Pairing</string>
    <string name="dev_name">NAME</string>
    <string name="item_download">1.DOWNLOAD</string>
    <string name="item_version">2.VERSION</string>
    <string name="dev_mac">MAC</string>
    <string name="start">START</string>
    <string name="start_download">starting download …</string>
    <string name="desc">LOGO OF PAX</string>
    <string name="bt_mac_text">TextView</string>
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select one device to pair</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="none_selected">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_finish">Finish</string>
    <string name="button_search">Search</string>
    <string name="button_stop">Stop</string>
    <string name="pair_succeed">Paired</string>
    <string name="pair_fail">Fail to pair</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_version">VersionActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="download_success">Finished download</string>
    <string name="download_error">Download Error</string>
    <string name="sdcard_error">SDCard error</string>
    <string name="no_devices_error">No bluetooth device avliable</string>
    <string name="invalid_ip">Invalid server address</string>
    <string name="invalid_port">Invalid server port</string>
    <string name="invalid_download_id">Invalid download id</string>
    <string name="not_bounded">Please paired bluetooth device first</string>
    <string name="fail_to_pair">Fail to pair</string>
    <string name="downloading">downloading…</string>
    <string name="type">Type : </string>
    <string name="type_mpos">MPOS</string>
    <string name="type_tms">TMS</string>
    <string name="type_unknown">UNKNOWN</string>
    <string name="done_start"> start to execute action : </string>
    <string name="done_doing"> is executing action : </string>
    <string name="done_finish"> finish action : </string>
    <string name="step_tms_connect">connect tms</string>
    <string name="step_tms_handshake">handshake</string>
    <string name="step_tms_term_auth">termnimal authencation</string>
    <string name="step_tms_req_upload">request upload</string>
    <string name="step_tms_upload">upload</string>
    <string name="step_tms_multi_task">get multi task</string>
    <string name="step_tms_parse_task_table">parse task table</string>
    <string name="step_tms_parse_task_table2">parse task table</string>
    <string name="step_tms_compare_task_local_tms">compare local with tms task</string>
    <string name="step_tms_delete_task_local">delete local task</string>
    <string name="step_tms_save_task_local">save local task</string>
    <string name="step_tms_load_file">download file</string>
    <string name="step_tms_term_id">get terminal ID</string>
    <string name="step_mpos_connect">connect MPOS</string>
    <string name="step_mpos_term_info">get terminal information</string>
    <string name="step_mpos_sn">get terminal SN</string>
    <string name="step_mpos_exsn">get terminal EXSN</string>
    <string name="step_mpos_vern_info">get terminal version information</string>
    <string name="step_mpos_set_task">set task list</string>
    <string name="step_mpos_save_file">save file content</string>
    <string name="action">Action : </string>
    <string name="file">File : </string>
    <string name="execute_fail"> : execute fail, code : </string>
    <string name="status_ok">OK</string>
    <string name="status_fail">FAIL</string>
    <string name="return_tips">Please restart POS terminal</string>
    <string name="version">\n Version: v1.00.0000_1.00.0002 B20150309</string>
    <string name="protocol">\n Kernel Version: v1.00.0000_1.00.0000 B20150309</string>
    <string name="about">\n Solfware: PAX MPOS ProTims for Android</string>
    <string name="reverse_right">\n PAX Computer Technology（Shenzhen）Co., Ltd. \n\n All right reversed\n\n Copyright ? 2015~2020</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
