<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D9D9D9"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bg"
        android:contentDescription="@string/desc"
        android:gravity="center"
        android:src="@drawable/paxlogo" />

    <TextView
        android:id="@+id/protocol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/protocol" />
    <TextView
        android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/version" />

    <TextView
        android:id="@+id/about1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about1" />

    <TextView
        android:id="@+id/reverseRight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse_right" />

</LinearLayout>