<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifiIp"/>
        <EditText
            android:id="@+id/comm_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="15"
            android:hint="@string/hintip"
            android:digits="0123456789."/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wifiPort"/>
        <EditText
            android:id="@+id/baudrate_edit"
            android:layout_width="0dip"
            android:hint="@string/hintport"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:text="@string/addByUsb"
        android:textColor="@drawable/selector_text_color"
        android:background="@drawable/selector_add"
        android:id="@+id/save_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifiDevice"
        android:background="@color/updateBackground"/>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>
