<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAA"
        android:paddingLeft="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="#fff" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAA"
        android:paddingLeft="5dp"
        android:text="@string/title_other_devices"
        android:textColor="#fff" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/button_search" />
        
        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/button_stop" />

        <Button
            android:id="@+id/button_finish"
           android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/button_finish" />
    </LinearLayout>

</LinearLayout>