<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/serverset_btn"
    android:orientation="vertical">

    <!--若不加上这句android:background="@drawable/serverset_btn"，则屏幕不会占全屏，导致显示有问题-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/TitleBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@drawable/serverset_btn"
        android:text="@string/serverSet"
        android:id="@+id/serverSetButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/updateBackground"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/about1"
        android:background="@drawable/serverset_btn"
        android:id="@+id/aboutButton"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/updateBackground"/>

    <!--代码问题，fragmenttabhost切换后只显示上面部分控件，故先用以下语句覆盖整个屏幕-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@drawable/serverset_btn"/>-->



</LinearLayout>
